Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-05-31 Tim
 PATCH: [ 1729179 ] Change "Rational Clearcase" to "Rational ClearCase"
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
 PATCH: [ 1727951 ] Use patch icon from TortoiseSVN
  Src/res: patch.bmp
 PATCH: [ 1727954 ] New help icon from Alexander Skinner
  Src/res: help_contents.bmp

2007-05-31 WinMerge experimental release 2.7.3.5 (SVN revision 4304)

2007-05-31 Kimmo
 PATCH: [ 1699783 ] Filter addon x borland delphi
  Submitted by Alberto Kalb
  Filters new file: Delphi.flt
 Add Alberto Kalb to contributors
  Docs/Users: Contributors.txt

2007-05-30 Kimmo
 PATCH: [ 1727722 ] Remove AppSerialize (only used for fonts)
  Src: MainFrm.cpp Merge.dsp Merge.h OptionsDef.h OptionsInit.cpp
  Src removed files: AppSerialize.cpp AppSerialize.h
 PATCH: [ 1727829 ] Relax parent folder opening restrictions
  Src: DirDoc.cpp

2007-05-26 Kimmo
 PATCH: [ 1725778 ] Cleanup CDirView::OpenSelection()
  Src: DirView.cpp DirView.h
 Coding style cleanup (returns in own lines)
  Src: paths.cpp

2007-05-23 Kimmo
 PATCH: [ 1723778 ] Warn user when folder compare contents have changed at disk
  Src: DirActions.cpp DirView.h Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2007-05-20 Tim
 PATCH: [ 1722213 ] Fix wrong </endtag> syntax color in HTML highlighters
  Src/editlib: asp.cpp html.cpp php.cpp

2007-05-20 Takashi
 PATCH: [ 1717774 ] Gradient toolbar
  Src: MainFrm.cpp MainFrm.h

2007-05-19 Tim
 Fix white space indenting in ASP and C# highlighter (included with PATCH #1556685).
  Src/editlib: asp.cpp csharp.cpp

2007-05-17 Kimmo
 BUG: [ 1719892 ] New file filter cannot find template file
  Src: FileFiltersDlg.cpp

2007-05-15 Tim
 BUG: [ 1719427 ] SetResourceVersions.bat shows error message
  Src: SetResourceVersions.wsf

2007-05-15 WinMerge experimental release 2.7.3.4 (SVN revision 4287)

2007-05-14 Gal
 BUG: [ 1714088 ] displays not existing content